regex-grammar.txt
# allows for an empty expression
body: expr
    | EPSILON

# or expression
expr: expr2 OR expr
    | expr2

# concatenation
expr2: expr3
     | expr3 expr2

# Kleene star (left associative)
expr3: expr4 STAR
     | expr4

# primitives
expr4: 0
     | letter
     | OPAREN expr CPAREN
     
